Fixed Icon alignment and scroll issues

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,12 +1,13 @@
 @media screen and (max-width: 1400px){
     #profile{
-        /* height: 83vh; */
-        /* margin-bottom: 6rem; */
+        /* height: 83vh;
+        margin-bottom: 6rem; */
         height:fit-content;
     }
-    .about_containers{
+    
+    /* .about_containers{
         flex-wrap: wrap;
-    }
+    } */
 }
 
 @media screen and (max-width: 1200px){
@@ -16,6 +17,11 @@
     #hamburger-nav{
         display: flex;
     }
+    
+    .about_containers{
+        display: block;
+    }
+
     #experience, .experience_details_container{
         margin-top: 2rem;
     }
